--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -1,20 +1,9 @@
-name: GitHub Actions Demo
-on: [push]
+name: build release and push to ECR
+on: [release]
 jobs:
-  Explore-GitHub-Actions:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
         
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,24 +11,37 @@ jobs:
       - name: Login to Public ECR
         uses: docker/login-action@v1
         with:
-          registry: public.ecr.aws
+          registry: public.ecr.aws/m4k8r3n4
           username: ${{ secrets.AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         env:
           AWS_REGION: us-east-1
-          
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+       
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        
+      - name: Set up JDK 1.11
+        uses: actions/setup-java@v2.1.0
+        with:
+            distribution: 'openjdk' # See 'Supported distributions' for available options
+            java-version: '11'
+      
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Maven package
+        run: mvn package -B
         
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.6.1
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             public.ecr.aws/m4k8r3n4/k8s-demo-app:latest
