--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -1,5 +1,7 @@
 name: build release and push to ECR
-on: [release]
+on: 
+  release:
+    types: [prereleased, released]
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -8,14 +10,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Login to Public ECR
-        uses: docker/login-action@v1
+      - id: install-aws-cli
+        uses: unfor19/install-aws-cli-action@v1
         with:
-          registry: public.ecr.aws/m4k8r3n4
-          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        env:
-          AWS_REGION: us-east-1
+          version: 2 # default
+          verbose: false # default        
+      - name: get docker credentials
+        run: aws ecr-public get-login-password --region us-east-1 --profile playground-dev-ecr-push | docker login --username AWS --password-stdin public.ecr.aws/m4k8r3n4
+        
+      #- name: Login to Public ECR
+      #  uses: docker/login-action@v1
+      #  with:
+      #    registry: public.ecr.aws/m4k8r3n4
+      #    username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #    password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #  env:
+      #    AWS_REGION: us-east-1
        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
