--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -29,7 +29,7 @@ jobs:
       #    version: 2 # default
       #    verbose: false # default        
       - name: get docker credentials
-        run: aws ecr-public get-login-password --region us-east-1 --profile playground-dev-ecr-push | docker login --username AWS --password-stdin public.ecr.aws/m4k8r3n4
+        run: aws ecr-public get-login-password --region us-east-1  | docker login --username AWS --password-stdin public.ecr.aws/m4k8r3n4
         
       #- name: Login to Public ECR
       #  uses: docker/login-action@v1
