--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Set up JDK 1.11
         uses: actions/setup-java@v2.1.0
         with:
-            distribution: 'openjdk' # See 'Supported distributions' for available options
+            distribution: 'adopt' # See 'Supported distributions' for available options
             java-version: '11'
       
       - name: Cache local Maven repository
