--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -2,6 +2,9 @@ name: build release and push to ECR
 on: 
   release:
     types: [prereleased, released]
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}    
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -10,15 +13,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-        
-      - name: Login to Public ECR
+      - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
-          registry: public.ecr.aws
-          username: ${{ secrets.AWS_PROD_ECR_VIADEE_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_PROD_ECR_VIADEE_SECRET_ACCESS_KEY }}
-        env:
-          AWS_REGION: us-east-1
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+
        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -52,13 +54,13 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-
-      - name: Build and push Docker images
+        
+            
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2.6.1
         with:
           context: .
-          platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}          
+          labels: ${{ steps.meta.outputs.labels }}            
             
