--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -8,6 +8,9 @@ env:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
         
       - name: Checkout
