--- a/Dockerfile.Multistage
+++ b/Dockerfile.Multistage
@@ -1,4 +1,4 @@
-FROM maven:3.6-jdk-11-slim as build_container
+FROM maven:3.8-openjdk-17-slim as build_container
 
 WORKDIR /build
 COPY pom.xml .
@@ -8,7 +8,7 @@ COPY  . /usr/src/build
 WORKDIR /usr/src/build
 RUN mvn package -B
 
-FROM openjdk:11-slim
+FROM openjdk:17-slim
 COPY --from=build_container /usr/src/build/target/k8s-demo-app.jar app.jar
 RUN groupadd -g 1000 appuser && \
     useradd -u 1000 -g 1000 appuser
