--- a/.github/workflows/build_push_to_ecr.yaml
+++ b/.github/workflows/build_push_to_ecr.yaml
@@ -1,16 +1,14 @@
 name: build release and push to ECR
-on: 
+on:
   release:
     types: [prereleased, released]
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
-        
       - name: Checkout
         uses: actions/checkout@v3
 
-        
       - name: Login to Public ECR
         uses: docker/login-action@v1
         with:
@@ -19,16 +17,16 @@ jobs:
           password: ${{ secrets.AWS_PROD_ECR_VIADEE_SECRET_ACCESS_KEY }}
         env:
           AWS_REGION: us-east-1
-       
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        
+
       - name: Set up JDK 1.11
         uses: actions/setup-java@v3
         with:
-            distribution: 'adopt' # See 'Supported distributions' for available options
-            java-version: '11'
-      
+          distribution: "adopt" # See 'Supported distributions' for available options
+          java-version: "11"
+
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
@@ -40,9 +38,7 @@ jobs:
       - name: Maven package
         run: mvn package -B
 
-        
-      -
-        name: Docker meta
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
         with:
@@ -60,5 +56,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}          
-            
+          labels: ${{ steps.meta.outputs.labels }}
