--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.1</version>
+		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
+		<hibernate.version>6.4.2.Final</hibernate.version> <!-- https://github.com/spring-projects/spring-boot/issues/39744 -->
 	</properties>
 
 	<dependencies>
@@ -54,21 +55,30 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
+			<!-- On update replace version in htmls -->
 			<version>5.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>webjars-locator-core</artifactId>
-			<version>0.55</version>
 		</dependency>
 	</dependencies>
 
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+				<configuration>
+<!--					&lt;!&ndash; mainClass is used to specify the path to the main method class &ndash;&gt;-->
+					<mainClass>de.viadee.k8s.testapp.K8sDemoApplication</mainClass>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>
+						de.viadee.k8s.testapp.K8sDemoApplication
+					</mainClass>
+				</configuration>
                 <executions>
                     <execution>
                         <goals>
