--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,12 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: "17"
-          distribution: "liberica"
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+          java-version: "21"
+          distribution: "liberica" # See 'Supported distributions' for available options
+          cache: 'maven'
+
+      - name: Maven package
+        run: mvn -B package
