--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ logging.level.de.viadee=debug
 
 spring.jpa.hibernate.ddl-auto=update
 
-server.tomcat.max-threads=2
+server.tomcat.threads.max=2
 
-management.endpoints.enabled-by-default=true
+management.endpoints.access.default=read-only
 management.endpoints.web.exposure.include=*
 management.health.db.enabled=true
 management.endpoint.health.show-details=always
