--- a/.github/workflows/native_build_push_to_ecr.yaml
+++ b/.github/workflows/native_build_push_to_ecr.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: {context}/DockerfileNative
+          file: './DockerfileNative'
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
