- Add integration and unit tests for CounterService and Spring Native. - Update DockerfileNative.Multistage for native testing phase. - Adjust GitHub workflow to include native tests before building.

--- a/.github/workflows/native_build.yaml
+++ b/.github/workflows/native_build.yaml
@@ -23,8 +23,11 @@ jobs:
           distribution: "graalvm" # See 'Supported distributions' for available options
           cache: 'maven'
 
+      - name: Maven native test
+        run: mvn clean test -PnativeTest
+
       - name: Maven native build
-        run: mvn package -Pnative native:compile
+        run: mvn clean package -Pnative native:compile
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
