--- a/Dockerfile.Multistage
+++ b/Dockerfile.Multistage
@@ -1,4 +1,4 @@
-FROM maven:3.9-amazoncorretto-21-alpine as build_container
+FROM maven:3.9-amazoncorretto-21-alpine AS build_container
 
 WORKDIR /build
 COPY pom.xml .
