Add webjars-locator-lite dependency and configure LiteWebJarsResourceResolver to provide version agnostic URLs that is native image compatible
- Introduced `webjars-locator-lite` dependency in `pom.xml` for better handling of webjars resources.
- Updated `WebConfig` to utilize `LiteWebJarsResourceResolver` for resolving webjars resources.
- Fixed resource paths in footer and header templates to align with webjars structure.
- Cleaned up `NativeReflectionRuntimeHintConfig` and adjusted hint registrations for template rendering.

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<!-- On update replace version in htmls and ...HintConfig.java (needed for native) -->
 			<version>5.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-lite</artifactId>
+		</dependency>
 	</dependencies>
 
     <build>
